# LiDAR-Vision-Fusion-for-Construction-Loader-Navigation

./: README.md  README_CN.md
map_fusion/: README.md  package.xml  setup.cfg  setup.py
map_fusion/config/: map_fusion_params.yaml
map_fusion/launch/: map_fusion.launch.py
map_fusion/map_fusion/: map_fusion_node.py
map_fusion/resource/: old_.txt
map_fusion/resource/test_python/: depthimage_cartorgrapher_map.pgm  lslidar_cartographer_map.pgm  orb_test.py
scan_fusion/: CMakeLists.txt  package.xml
scan_fusion/config/: fusion_params.yaml
scan_fusion/include/loader_sim_laserscan_fusion/: scan_fusion_ros.hpp
scan_fusion/launch/: scan_fusion.launch.py
scan_fusion/src/: scan_fusion_node.cpp  scan_fusion_ros.cpp
